manifests/namespace.yaml
  apiVersion: v1
  kind: Namespace
  metadata: 
    name: __CI_PROJECT_NAMESPACE__
    labels: 
      name: __ENVIRONMENT__
