manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __CI_PROJECT_NAME__-app
  namespace: __CI_PROJECT_NAMESPACE__
spec:
  ports:
  - name: http
    targetPort: 8000
    port: 80
  selector:
    app: __CI_PROJECT_NAME__-app
    environment: __ENVIRONMENT__
