manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __CI_PROJECT_NAME__-mysql
  namespace: __CI_PROJECT_NAMESPACE__
spec:
  selector:
    app: __CI_PROJECT_NAME__-mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
